--- a/notas/app/views/degrees/show.html.erb
+++ b/notas/app/views/degrees/show.html.erb
@@ -10,9 +10,9 @@
 <br/>
 <br/>
 
-<% link_to edit_degree_path(@year), :class=>"button" do%>
+<% link_to edit_degree_path(@year), :class=>"left pill button" do%>
   <span class="pen icon"></span><span>Modificar</span>
 <%end%>
-<%  link_to degree_path, :class=>"button" do%>
+<%  link_to degrees_path, :class=>"right pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
