--- a/notas/app/views/layouts/application.html.erb
+++ b/notas/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= @title || "Gestor de notas para el curso #{@year_selected.to_s}" %></title>
-  <%= stylesheet_link_tag 'scaffold', 'application', 'css3buttons' %>
+  <%= stylesheet_link_tag 'scaffold', 'css3buttons' %>
   
 </head>
 <body>
