--- a/notas/app/views/students/_form.html.erb
+++ b/notas/app/views/students/_form.html.erb
@@ -29,6 +29,6 @@
     <%= f.password_field :password_confirmation, :autocomplete=>'off' %>
   </p>
   <p>
-    <%= f.submit 'Guardar' %>
+    <button class="pill button"><span class="check icon"></span>Guardar</button>
   </p>
 <% end %>
