--- a/notas/app/views/students/new.html.erb
+++ b/notas/app/views/students/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= render :partial => 'form' %>
 
-<%  link_to students_path, :class=>"button" do%>
+<%  link_to students_path, :class=>"pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
