--- a/notas/app/views/teachers/index.html.erb
+++ b/notas/app/views/teachers/index.html.erb
@@ -12,24 +12,30 @@
     <td><%=h teacher.login %></td>
     <td><%=h teacher.email %></td>
     <td><%=h teacher.name %></td>
-    <td><%link_to teacher ,:class =>"left primary pill button" do%>
-      <span class="magnifier icon"></span><span>Mostrar</span>
-    <%end%>
-    <% if current_user.is_a? Administrator %>
-      <%  link_to edit_teacher_path(teacher), :class=>"middle pill button" do%>
-        <span class="pen icon"></span><span>Modificar</span>
+    <td class="botones">
+
+        <%if (current_user==teacher) || (current_user.is_a? Administrator)%>
+          <%link_to teacher ,:class =>"left pill button" do%>
+        <span class="magnifier icon"></span><span>Mostrar</span>
+          <%end%>
+      <%else%>
+        <%link_to teacher ,:class =>"pill button" do%>
+        <span class="magnifier icon"></span><span>Mostrar</span>
       <%end%>
-    <% elsif current_user==teacher %>
-      <%  link_to edit_teacher_path(teacher), :class=>"right negative pill button" do%>
-        <span class="key icon"></span><span>Cambiar contraseña</span>
+        <%end%>
+      <% if current_user.is_a? Administrator %>
+        <%  link_to edit_teacher_path(teacher), :class=>"middle pill button" do%>
+          <span class="pen icon"></span><span>Modificar</span>
+        <%end%>
+      <% elsif current_user==teacher %>
+        <%  link_to edit_teacher_path(teacher), :class=>"right pill button" do%>
+          <span class="key icon"></span><span>Cambiar contraseña</span>
+        <%end%>
       <%end%>
-    <%end%>
-    <% if current_user.is_a? Administrator %>
-      <%link_to teacher ,:confirm => '¿Estás seguro?', :method => :delete ,:class =>"right negative pill button" do%>
-      <span class="cross icon"></span><span>Eliminar</span>
-    <%end%>
+        <%= link_to '<span class="trash icon"></span><span>Eliminar</span>',
+          teacher, :confirm => '¿Estás seguro?', :method => :delete ,
+          :class =>"right negative pill button" if current_user.is_a? Administrator %>
     </td>
-    <% end %>
   </tr>
 <% end %>
 </table>
