--- a/notas/app/views/degrees/_form.html.erb
+++ b/notas/app/views/degrees/_form.html.erb
@@ -6,6 +6,6 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.submit 'Guardar' %>
+    <button class="pill button"><span class="check icon"></span>Guardar</button>
   </p>
 <% end %>
