--- a/notas/app/views/parts/new.html.erb
+++ b/notas/app/views/parts/new.html.erb
@@ -1,7 +1,8 @@
-<h1>New part</h1>
+<h1>Nuevo bloque</h1>
 
 <%= render :partial => 'form' %>
 
-<%  link_to parts_path, :class=>"button" do%>
+<%  link_to signature_parts_path(@signature, :ordinary=>@ordinary, :parent_id=>@parent), :class=>"button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
+
