--- a/notas/app/views/signatures/_form.html.erb
+++ b/notas/app/views/signatures/_form.html.erb
@@ -14,6 +14,6 @@
   </p>
 
   <p>
-    <%= f.submit 'Guardar' %>
+    <button class="pill button"><span class="check icon"></span>Guardar</button>
   </p>
 <% end %>
