--- a/notas/app/views/signatures/index.html.erb
+++ b/notas/app/views/signatures/index.html.erb
@@ -10,21 +10,21 @@
   <tr class="<%= cycle('impar', 'par') %>">
     <td><%=h signature.name %></td>
     <td><%=h signature.teacher_names(@year_selected.id).to_sentence %></td>
-<td>
+    <td class="botones">
     <% unless current_user.is_a? Administrator %>
-      <% link_to signature ,:class =>"button" do %>
+      <% link_to signature ,:class =>"pill button" do %>
         <span class="magnifier icon"></span><span>Mostrar</span>
       <% end %>
     <% end %>
   <% if current_user.is_a? Administrator %>
-    <%link_to signature ,:class =>"left primary pill button" do%>
-      <span class="magnifier icon"></span><span>Mostrar</span>
+    <%link_to signature ,:class =>"left pill button" do%>
+      <span class="magnifier icon"></span><span>Administrar asignatura</span>
     <%end%>
     <%  link_to edit_signature_path(signature), :class=>"middle pill button" do%>
       <span class="pen icon"></span><span>Modificar</span>
     <%end%>
     <%link_to signature ,:confirm => '¿Estás seguro?', :method => :delete ,:class =>"right negative pill button" do%>
-      <span class="cross icon"></span><span>Eliminar</span>
+      <span class="trash icon"></span><span>Eliminar</span>
     <%end%>
 </td>
   <% end %>
@@ -34,7 +34,7 @@
 
 <br />
 <% if current_user.is_a? Administrator %>
-  <%link_to new_signature_path ,:class=>"button" do%>
+  <%link_to new_signature_path ,:class=>"pill button" do%>
     <span class="plus icon"></span><span>Nueva Asignatura</span>
   <%end%>
 
