--- a/notas/app/views/teachers/edit.html.erb
+++ b/notas/app/views/teachers/edit.html.erb
@@ -2,9 +2,9 @@
 
 <%= render :partial => 'form' %>
 
-<%link_to @teacher ,:class =>"left primary pill button" do%>
+<%link_to @teacher ,:class =>"left pill button" do%>
   <span class="magnifier icon"></span><span>Mostrar</span>
 <%end%>
-<%  link_to teachers_path, :class=>"right negative pill button" do%>
+<%  link_to teachers_path, :class=>"right pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
