--- a/notas/app/views/teachers/show.html.erb
+++ b/notas/app/views/teachers/show.html.erb
@@ -21,14 +21,14 @@
 <% end %>
 
 <% if current_user.is_a? Administrator %>
-  <%  link_to edit_teacher_path(@teacher), :class=>"left primary pill button" do%>
+  <%  link_to edit_teacher_path(@teacher), :class=>"left pill button" do%>
       <span class="pen icon"></span><span>Modificar</span>
     <%end%>
 <% elsif (current_user == @teacher)  %>
-    <% link_to edit_teacher_path(@teacher), :class=>"left primary pill button" do%>
+    <% link_to edit_teacher_path(@teacher), :class=>"left pill button" do%>
       <span class="key icon"></span><span>Cambiar contraseña</span>
     <%end%>
 <% end %>
-<%  link_to teacher_path, :class=>"right negative pill button" do%>
+<%  link_to teachers_path, :class=>"right pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
