--- a/notas/app/views/exams/show.html.erb
+++ b/notas/app/views/exams/show.html.erb
@@ -1,3 +1,4 @@
+<br/>
 <h1>Datos del Examen perteneciente al bloque: <%=truncate h(@exam.part.description) %></h1>
 <h2>
   <br/>
@@ -40,7 +41,7 @@
   </p>
   <p>
     <%= f.label :calification, 'Calificación' %><br />
-    <%= f.text_field :calification, :class=>'num' %>
+    <%= f.text_field :calification, :class=>'num very_small' %>
   </p>
   <p>
    <button class="pill button"><span class="check icon"></span>Insertar nota</button>
