--- a/notas/app/views/teachers/show.html.erb
+++ b/notas/app/views/teachers/show.html.erb
@@ -1,3 +1,4 @@
+<br/>
 <h1>Datos del Profesor</h1>
 
 <p>
@@ -15,20 +16,31 @@
   <%=h @teacher.name %>
 </p>
 
+<br/>
+<%if @teacher.find_signatures(@year_selected, @degree_selected).any?%>
 <h2>Asignaturas del Profesor</h2>
 <% @teacher.find_signatures(@year_selected, @degree_selected).each do |signature| %>
   <p><%= signature.name %></p>
 <% end %>
+  <%end%>
 
 <% if current_user.is_a? Administrator %>
   <%  link_to edit_teacher_path(@teacher), :class=>"left pill button" do%>
       <span class="pen icon"></span><span>Modificar</span>
     <%end%>
+      <%  link_to teachers_path, :class=>"right pill button" do%>
+  <span class="home icon"></span><span>Volver al listado</span>
+<%end%>
 <% elsif (current_user == @teacher)  %>
     <% link_to edit_teacher_path(@teacher), :class=>"left pill button" do%>
       <span class="key icon"></span><span>Cambiar contraseña</span>
     <%end%>
-<% end %>
-<%  link_to teachers_path, :class=>"right pill button" do%>
+      <%  link_to teachers_path, :class=>"right pill button" do%>
   <span class="home icon"></span><span>Volver al listado</span>
 <%end%>
+  <%else%>
+      <%  link_to teachers_path, :class=>"pill button" do%>
+  <span class="home icon"></span><span>Volver al listado</span>
+<%end%>
+  
+<% end %>
